# generic_curriculum_transfer

./: .gitignore  README.md  pyproject.toml
airflow/dags/: gct_pipeline_dag.py  gct_sae_pipeline_dag.py
configs/: competitive_math.yaml  example_any_hf_dataset.yaml
docs/: architecture.md  etl.md  ibm_cloud.md  sae.md
docs/superpowers/plans/: 2026-06-03-generic-curriculum-transfer.md
gct/: __init__.py  cli.py
gct/config/: __init__.py  load.py  schema.py
gct/data/: __init__.py  hf_loader.py  torch_dataset.py
gct/etl/: __init__.py  local.py  spark.py
gct/math_compat/: __init__.py  commands.py  utils.py
gct/runtime/: __init__.py  backends.py  inference.py  queue_control.py  resources.py  work_queue.py
gct/sae/: __init__.py  dynamic_transfer.py  extract.py  metrics.py  neighbors.py  store.py  transfer.py
gct/schedulers/: __init__.py  curriculum.py  knapsack.py
gct/sweep/: __init__.py  grading.py  runner.py  summary.py
gct/telemetry/: __init__.py  metrics.py  wandb.py
gct/training/: __init__.py  ablation.py  collate.py  loop.py
gct/utils/: __init__.py  hashing.py  jsonl.py
scripts/: install_cloud_env.sh  run_cloud_ablation.sh  run_cloud_sae_pipeline.sh
slurm/: run_ablation_array.sbatch  run_pipeline.sbatch  run_sae_pipeline.sbatch
tests/: test_cli_shard.py  test_config.py  test_knapsack.py  test_math_compat.py  test_queue_control.py  test_sae_metrics.py  test_sae_neighbors.py  test_sglang_inference.py  test_sweep_grading.py  test_wandb.py  test_work_queue.py
